[package]
name = "typos-json-to-github-annotations"
version = "0.1.0"
edition = "2021"
authors = ["Gavin Mogan <rust@gavinmogan.com>"]
repository = "https://github.com/halkeye/typos-json-to-github-annotations"
license = "MIT"
exclude = ["sample.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.59"
itertools = "0.10"
